# gpu-native-room-inference

./: CMakeLists.txt  README.md  __main__.py  agent.py  pyproject.toml
benchmarks/: benchmark.py
benchmarks/variants/: benchmark_variants.py  variant_comparison_main.cu
docs/: application_versions.md  fm_challenge.md  plato_integration.md
examples/variants/: example_edge_ai.cu
include/: room_types.h  warp_api.h
kernels/: thread_as_room.cu  warp_as_room_basic.cu
tests/: test_correctness.cu
variants/cloud_serving/: CMakeLists.txt
variants/edge_ai/: CMakeLists.txt
variants/financial/: CMakeLists.txt
variants/game_ai/: CMakeLists.txt
variants/healthcare/: CMakeLists.txt
variants/iot_sensors/: CMakeLists.txt
variants/robotics/: CMakeLists.txt
variants/scientific_sim/: CMakeLists.txt
