[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-native-room-inference"
version = "1.0.0"
description = "Cocapn Fleet module — gpu-native-room-inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
gpu_native_room_inference = "agent:main"
